[package]
name = "kvs"
version = "0.1.0"
authors = ["dougfort <doug.fort@gmail.com>"]
description = "a key-value store"
edition = "2018"

[dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
clap = "2.33.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
criterion = "0.2.11"
rand = "0.6.5"
